--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -16,6 +16,18 @@
   margin-right: calc(50% - min(50%, 33rem));
 }
 
+input[type="color"] {
+  -webkit-appearance: none;
+  border: none;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 0.25rem;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
