--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,12 +1,11 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @plugin '@tailwindcss/typography';
 @plugin '@tailwindcss/forms';
 
 @theme {
-  --font-mono:
-    'Fira Code', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    'Liberation Mono', 'Courier New', monospace;
+  --font-mono: "Fira Code", ui-monospace, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 /*
@@ -33,27 +32,27 @@
   }
 
   @media (min-width: 1024px) {
-    .prose :where(.prose > *):not(:where([class~='not-prose'] *)) {
+    .prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
       max-width: 40rem;
       margin-left: auto;
       margin-right: auto;
     }
   }
 
-  .prose :where(.prose > *):not(:where([class~='not-prose'] *)) {
+  .prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
     max-width: 50rem;
     margin-left: calc(50% - min(50%, 33rem));
     margin-right: calc(50% - min(50%, 33rem));
   }
 
-  input[type='color'] {
+  input[type="color"] {
     -webkit-appearance: none;
     border: none;
   }
-  input[type='color']::-webkit-color-swatch-wrapper {
+  input[type="color"]::-webkit-color-swatch-wrapper {
     padding: 0;
   }
-  input[type='color']::-webkit-color-swatch {
+  input[type="color"]::-webkit-color-swatch {
     border: none;
     border-radius: 0.25rem;
   }
