--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -4,8 +4,9 @@
 @plugin '@tailwindcss/forms';
 
 @theme {
-  --font-mono: "Fira Code", ui-monospace, SFMono-Regular, Menlo, Monaco,
-    Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-mono:
+    "Fira Code", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
 }
 
 /*
